--- a/package.json
+++ b/package.json
@@ -9,10 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~54.0.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/slider": "5.0.1",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/auth": "^23.3.1",
+    "@react-native-google-signin/google-signin": "^16.0.0",
+    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/elements": "^2.6.4",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
+    "@unimodules/core": "^7.2.0",
+    "axios": "^1.12.2",
     "expo": "~54.0.7",
+    "expo-background-task": "~1.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.12",
+    "expo-firebase-core": "^3.1.0",
+    "expo-firebase-recaptcha": "^1.4.4",
+    "expo-font": "~14.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-location": "~19.0.7",
+    "expo-network": "~8.0.7",
+    "expo-notifications": "~0.32.11",
     "expo-status-bar": "~3.0.8",
+    "expo-task-manager": "~14.0.7",
+    "firebase": "^12.2.1",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-webview": "13.15.0"
   },
   "private": true
 }
